# smarthome

./: .gitignore  01.bat  CMakeLists.txt  README.md
assets/db/: schema.sql  seed.sql
resources/: app.qrc
src/app/: App.cpp  App.h  AppContext.h  main.cpp
src/data/: DataGenerator.cpp  DataGenerator.h
src/domain/enums/: AlarmType.h  DeviceType.h
src/domain/models/: AlarmRecord.h  Device.h  DeviceGroup.h  EnvRecord.h  OperationLog.h  Scene.h
src/infrastructure/audio/: SoundPlayer.cpp  SoundPlayer.h
src/infrastructure/export/: CsvExporter.cpp  CsvExporter.h
src/infrastructure/network/: DeviceGatewayClient.cpp  DeviceGatewayClient.h  ProtocolCodec.cpp  ProtocolCodec.h  SimulatedDeviceServer.cpp  SimulatedDeviceServer.h
src/infrastructure/persistence/: DatabaseManager.cpp  DatabaseManager.h
src/infrastructure/settings/: SettingsKeys.h  SettingsManager.cpp  SettingsManager.h
src/presentation/admin/: AdminPage.cpp  AdminPage.h  AdminPage.ui  GroupsAdminDialog.cpp  GroupsAdminDialog.h  GroupsAdminDialog.ui
src/presentation/alarms/: AlarmsPage.cpp  AlarmsPage.h  AlarmsPage.ui
src/presentation/auth/: LoginPage.cpp  LoginPage.h  LoginPage.ui
src/presentation/devices/: DeviceEditDialog.cpp  DeviceEditDialog.h  DeviceEditDialog.ui  DevicesPage.cpp  DevicesPage.h  DevicesPage.ui
src/presentation/env/: EnvChartPage.cpp  EnvChartPage.h  EnvChartPage.ui
src/presentation/history/: HistoryPage.cpp  HistoryPage.h  HistoryPage.ui
src/presentation/home/: EnvChartWidget.cpp  EnvChartWidget.h  (+4 more)
src/services/: AdminService.cpp  AdminService.h  AiService.cpp  AiService.h  AlarmService.cpp  AlarmService.h  AuthService.cpp  AuthService.h  DeviceService.cpp  DeviceService.h  HistoryService.cpp  HistoryService.h  SceneService.cpp  SceneService.h
(+24 files in other folders)
